add OGC WKT definitions
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@223 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/equidistant_conic.html
+++ b/geotiff/html/proj_list/equidistant_conic.html
@@ -19,8 +19,12 @@
 <td>CT_EquidistantConic (13)
 <tr>
 
+<td>OGC WKT Name
+<td>Equidistant_Conic
+<tr>
+
 <td> Supported By
-<td> GeoTIFF, GXF
+<td> GeoTIFF, GXF, OGC WKT
 <tr>
 
 </table>
@@ -31,20 +35,23 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 
 <tr>
 <td>Latitude of first standard parallel
 <td>1
-<td> StdParallel1
+<td>StdParallel1
+<td>standard_parallel_1
 <td>Angular
 <td>
 
 <tr>
 <td>Latitude of second standard parallel
 <td>2
-<td> StdParallel2
+<td>StdParallel2
+<td>standard_parallel_2
 <td>Angular
 <td>
 
@@ -52,6 +59,7 @@
 <td>Latitude of false origin
 <td> 3
 <td> NatOriginLat
+<td> latitude_of_center
 <td> Angular
 <td>
 
@@ -59,6 +67,7 @@
 <td> Longitude of false origin
 <td> 4
 <td> NatOriginLong
+<td> longitude_of_center
 <td> Angular
 <td>
 
@@ -66,6 +75,7 @@
 <td>Easting of false origin
 <td>6
 <td>FalseEasting
+<td>false_easting
 <td>Linear
 <td>
 
@@ -73,6 +83,7 @@
 <td>Northing of false origin
 <td>7
 <td>FalseNorthing
+<td>false_northing
 <td>Linear
 <td>
 
