--- a/geotiff/html/proj_list/equirectangular.html
+++ b/geotiff/html/proj_list/equirectangular.html
@@ -27,8 +27,12 @@
 <td>CT_Equirectangular (17)
 <tr>
 
+<td>OGC WKT Name
+<td>Equirectangular
+<tr>
+
 <td>Supported By
-<td> GeoTIFF, PROJ.4
+<td> GeoTIFF, PROJ.4, OGC WKT
 <tr>
 
 </table>
@@ -39,6 +43,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 
@@ -46,6 +51,7 @@
 <td>Latitude of projection center
 <td>1
 <td>ProjCenterLat
+<td>latitude_of_origin
 <td>Angular
 <td>
 
@@ -53,6 +59,7 @@
 <td>Longitude of projection center
 <td>2
 <td>ProjCenterLong
+<td>central_meridian
 <td>Angular
 <td>
 
@@ -60,6 +67,7 @@
 <td>False Easting
 <td>6
 <td>FalseEasting
+<td>false_easting
 <td>Linear
 <td>
 
@@ -67,6 +75,7 @@
 <td>False Northing
 <td>7
 <td>FalseNorthing
+<td>false_northing
 <td>Linear
 <td>
 
