--- a/geotiff/html/proj_list/lambert_conic_conformal_2sp.html
+++ b/geotiff/html/proj_list/lambert_conic_conformal_2sp.html
@@ -23,8 +23,12 @@
 <td>CT_LambertConfConic (9)
 <tr>
 
+<td>OGC WKT Name
+<td> Lambert_Conformal_Conic_2SP
+<tr>
+
 <td>Supported By
-<td>EPSG, GeoTIFF, PROJ.4
+<td>EPSG, GeoTIFF, PROJ.4, OGC WKT
 <tr>
 
 </table>
@@ -35,6 +39,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 
@@ -42,6 +47,7 @@
 <td>Latitude of first standard parallel
 <td>1
 <td> StdParallel1
+<td> standard_parallel_1
 <td>Angular
 <td>
 
@@ -49,6 +55,7 @@
 <td>Latitude of second standard parallel
 <td>2
 <td> StdParallel2
+<td> standard_parallel_2
 <td>Angular
 <td>
 
@@ -56,6 +63,7 @@
 <td>Latitude of false origin
 <td> 3
 <td> FalseOriginLat
+<td> latitude_of_origin
 <td> Angular
 <td>
 
@@ -63,6 +71,7 @@
 <td> Longitude of false origin
 <td> 4
 <td> FalseOriginLong
+<td> central_meridian
 <td> Angular
 <td>
 
@@ -70,6 +79,7 @@
 <td>Easting of false origin
 <td>6
 <td>FalseOriginEasting
+<td>false_easting
 <td>Linear
 <td>
 
@@ -77,6 +87,7 @@
 <td>Northing of false origin
 <td>7
 <td>FalseOriginNorthing
+<td>false_northing
 <td>Linear
 <td>
 
