--- a/geotiff/html/proj_list/polar_stereographic.html
+++ b/geotiff/html/proj_list/polar_stereographic.html
@@ -19,8 +19,12 @@
 <td>CT_PolarStereographic (15)
 <tr>
 
+<td>OGC WKT Name
+<td>Polar_Stereographic
+<tr>
+
 <td>Supported By
-<td>EPSG, GeoTIFF, PROJ.4
+<td>EPSG, GeoTIFF, PROJ.4, OGC WKT
 <tr>
 
 </table>
@@ -31,6 +35,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 
@@ -38,6 +43,7 @@
 <td>Latitude of natural origin
 <td>1
 <td>NatOriginLat
+<td>latitude_of_origin
 <td>Angular
 <td>I think this is restricted to 90 or -90
 
@@ -45,6 +51,7 @@
 <td>Longitude of natural origin
 <td>2
 <td>StraightVertPoleLong
+<td>central_meridian
 <td>Angular
 <td>
 
@@ -52,6 +59,7 @@
 <td>Scale factor at natural origin
 <td>5
 <td>ScaleAtNatOrigin
+<td>scale_factor
 <td>Unitless
 <td>Not in original GeoTIFF ... I added for similarity
 with EPSG.
@@ -60,6 +68,7 @@ with EPSG.
 <td>False Easting
 <td>6
 <td>FalseEasting
+<td>false_easting
 <td>Linear
 <td>
 
@@ -67,6 +76,7 @@ with EPSG.
 <td>False Northing
 <td>7
 <td>FalseNorthing
+<td>false_northing
 <td>Linear
 <td>
 
