--- a/geotiff/html/proj_list/principles.html
+++ b/geotiff/html/proj_list/principles.html
@@ -38,6 +38,10 @@ projection code number (CT_* code) from geo_ctrans.inc.  The symbolic GeoTIFF
 name should be provided with the number in brackets. 
 eg. CT_TransverseMercator(1)<p>
 
+<li> <b>OGC WKT Name</b>:
+The name used in the PROJECTION[] keyword for OpenGIS Well 
+Known Text format SRS definitions. <p>
+
 </ul>
 
 <h3>Parameters Table</h3>
@@ -59,6 +63,10 @@ incorporated.<p>
 
 <li> <b>GeoTIFF ID</b>:
 This is the GeoTIFF Parameter name, for instance CenterLong. <p>
+
+<li> <b>OGC WKT</b>:
+This is the Open GIS Well Known Text keyword for the parameter.<p>
+
 
 <li> <b>Units</b>: 
 This is one of "Angular", "Linear" or "Unitless".  It indicates the general
