--- a/geotiff/html/proj_list/rosenmund_oblique_mercator.html
+++ b/geotiff/html/proj_list/rosenmund_oblique_mercator.html
@@ -91,5 +91,8 @@ different EPSG name.
 <h3>Notes</h3>
 
 I don't really know anything about this projection ... just assumed to
-be similar to Oblique Mercator in terms of parameters.<p>
+be similar to Oblique Mercator in terms of parameters.  There is no defined
+support for this in OGC WKT.
+<p>
+
 </body>
