--- a/geotiff/html/proj_list/tunisia_mining_grid.html
+++ b/geotiff/html/proj_list/tunisia_mining_grid.html
@@ -19,8 +19,12 @@
 <td> (unsupported)
 <tr>
 
+<td>OGC WKT Name
+<td>Tunisia_Mining_Grid
+<tr>
+
 <td>Supported By
-<td>EPSG
+<td>EPSG, OGC WKT
 <tr>
 
 </table>
@@ -31,6 +35,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 <tr>
@@ -38,6 +43,7 @@
 <td> Latitude of origin
 <td> 1
 <td> -
+<td> latitude_of_origin
 <td> Angular
 <td>
 <tr>
@@ -45,6 +51,7 @@
 <td> Longitude of origin
 <td> 2
 <td> -
+<td> central_meridian
 <td> Angular
 <td>
 <tr>
@@ -52,6 +59,7 @@
 <td> False Easting
 <td> 6
 <td> -
+<td> false_easting
 <td> Linear
 <td>
 <tr>
@@ -59,11 +67,17 @@
 <td> False Northing
 <td> 7
 <td> -
+<td> false_northing
 <td> Linear
 <td>
 <tr>
 
 </table>
+
+<h3>Notes</h3>
+
+This is listed as Tunisia_Mining_Grid in OGC WKT documents but no 
+formulation of the parameter is available.<p>
 
 <h3>EPSG Notes</h3>
 
