--- a/geotiff/html/proj_list/vandergrinten.html
+++ b/geotiff/html/proj_list/vandergrinten.html
@@ -23,8 +23,12 @@
 <td>CT_VanDerGrinten (25)
 <tr>
 
+<td>OGC WKT Name
+<td>VanDerGrinten
+<tr>
+
 <td>Supported By
-<td> GeoTIFF, PROJ.4
+<td> GeoTIFF, PROJ.4, OGC WKT
 <tr>
 
 </table>
@@ -35,6 +39,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 
@@ -42,6 +47,7 @@
 <td>Longitude of projection center
 <td>2
 <td>ProjCenterLong
+<td>central_meridian
 <td>Angular
 <td>
 
@@ -49,6 +55,7 @@
 <td>False Easting
 <td>6
 <td>FalseEasting
+<td>false_easting
 <td>Linear
 <td>
 
@@ -56,6 +63,7 @@
 <td>False Northing
 <td>7
 <td>FalseNorthing
+<td>false_northing
 <td>Linear
 <td>
 
