--- a/geotiff/html/proj_list/albers_equal_area_conic.html
+++ b/geotiff/html/proj_list/albers_equal_area_conic.html
@@ -19,8 +19,12 @@
 <td>CT_AlbersEqualArea (11)
 <tr>
 
+<td>OGC WKT Name
+<td>Albers_Conic_Equal_Area
+<tr>
+
 <td> Supported By
-<td> GeoTIFF, GXF
+<td> GeoTIFF, GXF, OGC WKT
 <tr>
 
 </table>
@@ -31,6 +35,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 
@@ -38,6 +43,7 @@
 <td>Latitude of first standard parallel
 <td>1
 <td> StdParallel1
+<td> standard_parallel_1
 <td>Angular
 <td>
 
@@ -45,6 +51,7 @@
 <td>Latitude of second standard parallel
 <td>2
 <td> StdParallel2
+<td> standard_parallel_2
 <td>Angular
 <td>
 
@@ -52,6 +59,7 @@
 <td>Latitude of false origin
 <td> 3
 <td> NatOriginLat
+<td> latitude_of_center
 <td> Angular
 <td>
 
@@ -59,6 +67,7 @@
 <td> Longitude of false origin
 <td> 4
 <td> NatOriginLong
+<td> longitude_of_center
 <td> Angular
 <td>
 
@@ -66,6 +75,7 @@
 <td>Easting of false origin
 <td>6
 <td> FalseEasting
+<td> fase_easting
 <td>Linear
 <td>
 
@@ -73,6 +83,7 @@
 <td>Northing of false origin
 <td>7
 <td> FalseNorthing
+<td> fase_northing
 <td>Linear
 <td>
 
