--- a/geotiff/html/proj_list/lambert_conic_conformal_1sp.html
+++ b/geotiff/html/proj_list/lambert_conic_conformal_1sp.html
@@ -19,8 +19,12 @@
 <td>CT_LambertConfConic_1SP (9)
 <tr>
 
+<td>OGC WKT Name
+<td>Lambert_Conformal_Conic_1SP
+<tr>
+
 <td>Supported By
-<td>EPSG, GeoTIFF
+<td>EPSG, GeoTIFF, OGC WKT
 <tr>
 
 </table>
@@ -31,6 +35,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 
@@ -38,6 +43,7 @@
 <td>Latitude of natural origin
 <td>1
 <td>NatOriginLat
+<td>latitude_of_origin
 <td>Angular
 <td>
 
@@ -45,6 +51,7 @@
 <td>Longitude of natural origin
 <td>2
 <td>NatOriginLong
+<td>central_meridian
 <td>Angular
 <td>
 
@@ -52,6 +59,7 @@
 <td>Scale factor at natural origin
 <td>5
 <td>ScaleAtNatOrigin
+<td>scale_factor
 <td>Unitless
 <td>
 
@@ -59,6 +67,7 @@
 <td>False Easting
 <td>6
 <td>FalseEasting
+<td>false_easting
 <td>Linear
 <td>
 
@@ -66,10 +75,15 @@
 <td>False Northing
 <td>7
 <td>FalseNorthing
+<td>false_northing
 <td>Linear
 <td>
 
 </table>
+<h3>Notes</h3>
+
+OGC WKT doesn't seem to support the 1SP form of LCC.<p>
+
 
 <h3>EPSG Notes</h3>
 
