--- a/geotiff/html/proj_list/miller_cylindrical.html
+++ b/geotiff/html/proj_list/miller_cylindrical.html
@@ -19,8 +19,12 @@
 <td>CT_MillerCylindrical (20)
 <tr>
 
+<td>OGC WKT Name
+<td>Miller_Cylindrical
+<tr>
+
 <td>Supported By
-<td> GeoTIFF, PROJ.4
+<td> GeoTIFF, PROJ.4, OGC WKT
 <tr>
 
 </table>
@@ -31,6 +35,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 
@@ -38,6 +43,7 @@
 <td> Latitude of projection center
 <td> 1
 <td> ProjCenterLat
+<td> latitude_of_center
 <td> Angular
 <td> This is normally zero and optional in GeoTIFF.
 
@@ -45,6 +51,7 @@
 <td>Longitude of projection center
 <td>2
 <td>ProjCenterLong
+<td> longitude_of_center
 <td>Angular
 <td>
 
@@ -52,6 +59,7 @@
 <td>False Easting
 <td>6
 <td>FalseEasting
+<td>false_easting
 <td>Linear
 <td>
 
@@ -59,6 +67,7 @@
 <td>False Northing
 <td>7
 <td>FalseNorthing
+<td>false_northing
 <td>Linear
 <td>
 
