--- a/geotiff/html/proj_list/new_zealand_map_grid.html
+++ b/geotiff/html/proj_list/new_zealand_map_grid.html
@@ -19,6 +19,10 @@
 <td> CT_NewZealandMapGrid (26)
 <tr>
 
+<td>OGC WKT Name
+<td>New_Zealand_Map_Grid
+<tr>
+
 <td>Supported By
 <td>EPSG, GeoTIFF
 <tr>
@@ -31,6 +35,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 <tr>
@@ -38,6 +43,7 @@
 <td> Latitude of natural origin
 <td> 1
 <td> NatOriginLat
+<td> latitude_of_origin
 <td> Angular
 <td>
 <tr>
@@ -45,6 +51,7 @@
 <td> Longitude of natural origin
 <td> 2
 <td> NatOriginLong
+<td> central_meridian
 <td> Angular
 <td>
 <tr>
@@ -52,6 +59,7 @@
 <td>False Easting
 <td>6
 <td>FalseEasting
+<td>false_easting
 <td>Linear
 <td>
 <tr>
@@ -59,6 +67,7 @@
 <td>False Northing
 <td>7
 <td>FalseNorthing
+<td>false_northing
 <td>Linear
 <td>
 <tr>
