--- a/geotiff/html/proj_list/polyconic.html
+++ b/geotiff/html/proj_list/polyconic.html
@@ -19,8 +19,12 @@
 <td>CT_Polyconic (22)
 <tr>
 
+<td>OGC WKT Name
+<td>Polyconic
+<tr>
+
 <td> Supported By
-<td> GeoTIFF, GXF
+<td> GeoTIFF, GXF, OGC WKT
 <tr>
 
 </table>
@@ -31,6 +35,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 
@@ -38,6 +43,7 @@
 <td> Latitude of false origin
 <td> 1
 <td> NatOriginLat
+<td> latitude_of_origin
 <td> Angular
 <td>
 
@@ -45,6 +51,7 @@
 <td> Longitude of false origin
 <td> 2
 <td> NatOriginLong
+<td> central_meridian
 <td> Angular
 <td>
 
@@ -52,6 +59,7 @@
 <td> Scale factor at natural origin
 <td> 5
 <td> ScaleAtNatOrigin
+<td> (not included)
 <td> Unitless
 <td>
 
@@ -59,6 +67,7 @@
 <td> Easting of false origin
 <td> 6
 <td> FalseEasting
+<td> false_easting
 <td> Linear
 <td>
 
@@ -66,6 +75,7 @@
 <td> Northing of false origin
 <td> 7
 <td> FalseNorthing
+<td> false_northing
 <td> Linear
 <td>
 
