--- a/geotiff/html/proj_list/stereographic.html
+++ b/geotiff/html/proj_list/stereographic.html
@@ -19,8 +19,12 @@
 <td>CT_Stereographic (14)
 <tr>
 
+<td>OGC WKT Name
+<td>Stereographic
+<tr>
+
 <td>Supported By
-<td> GeoTIFF, PROJ.4
+<td> GeoTIFF, PROJ.4, OGC WKT
 <tr>
 
 </table>
@@ -31,6 +35,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 
@@ -38,6 +43,7 @@
 <td>Latitude of projection center
 <td>1
 <td>ProjCenterLat
+<td>latitude_of_origin
 <td>Angular
 <td>
 
@@ -45,6 +51,7 @@
 <td>Longitude of projection center
 <td>2
 <td>ProjCenterLong
+<td>central_meridian
 <td>Angular
 <td>
 
@@ -52,6 +59,7 @@
 <td>Scale factor at natural origin
 <td>5
 <td>ScaleAtNatOrigin
+<td>scale_factor
 <td>Unitless
 <td>Defaults to 1.0 when not available.
 
@@ -59,6 +67,7 @@
 <td>False Easting
 <td>6
 <td>FalseEasting
+<td>false_easting
 <td>Linear
 <td>
 
@@ -66,6 +75,7 @@
 <td>False Northing
 <td>7
 <td>FalseNorthing
+<td>false_northing
 <td>Linear
 <td>
 
