--- a/geotiff/html/proj_list/swiss_oblique_cylindrical.html
+++ b/geotiff/html/proj_list/swiss_oblique_cylindrical.html
@@ -19,8 +19,12 @@
 <td> CT_SwissObliqueCylindrical  (5)
 <tr>
 
+<td>OGC WKT Name
+<td> Swiss_Oblique_Cylindrical
+<tr>
+
 <td>Supported By
-<td>EPSG, GeoTIFF
+<td>EPSG, GeoTIFF, OGC WKT
 <tr>
 
 </table>
@@ -31,6 +35,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 <tr>
@@ -38,6 +43,7 @@
 <td> Latitude of projection center
 <td> 1
 <td> CenterLat
+<td> latitude_of_origin
 <td> Angular
 <td>
 <tr>
@@ -45,6 +51,7 @@
 <td>Longitude of projection center
 <td>2
 <td>CenterLong
+<td>central_meridian
 <td>Angular
 <td>
 <tr>
@@ -52,6 +59,7 @@
 <td>False Easting
 <td>6
 <td>FalseEasting
+<td>false_easting
 <td>Linear
 <td>
 <tr>
@@ -59,6 +67,7 @@
 <td>False Northing
 <td>7
 <td>FalseNorthing
+<td>false_northing
 <td>Linear
 <td>
 <tr>
