--- a/geotiff/html/proj_list/transverse_mercator.html
+++ b/geotiff/html/proj_list/transverse_mercator.html
@@ -23,8 +23,12 @@
 <td>CT_TransverseMercator (1)
 <tr>
 
+<td>OGC WKT Name
+<td>Transverse_Mercator
+<tr>
+
 <td>Supported By
-<td>EPSG, GeoTIFF, PROJ.4
+<td>EPSG, GeoTIFF, PROJ.4, OGC WKT
 <tr>
 
 </table>
@@ -35,6 +39,7 @@
 <th>Name
 <th>EPSG #
 <th>GeoTIFF ID
+<th>OGC WKT
 <th>Units
 <th>Notes
 
@@ -42,6 +47,7 @@
 <td>Latitude of natural origin
 <td>1
 <td>NatOriginLat
+<td>latitude_of_origin
 <td>Angular
 <td>
 
@@ -49,6 +55,7 @@
 <td>Longitude of natural origin
 <td>2
 <td>NatOriginLong
+<td>central_meridian
 <td>Angular
 <td>
 
@@ -56,6 +63,7 @@
 <td>Scale factor at natural origin
 <td>5
 <td>ScaleAtNatOrigin
+<td>scale_factor
 <td>Unitless
 <td>
 
@@ -63,6 +71,7 @@
 <td>False Easting
 <td>6
 <td>FalseEasting
+<td>false_easting
 <td>Linear
 <td>
 
@@ -70,6 +79,7 @@
 <td>False Northing
 <td>7
 <td>FalseNorthing
+<td>false_northing
 <td>Linear
 <td>
 
