updated with false easting/northing
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@226 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/eckert_iv.html
+++ b/geotiff/html/proj_list/eckert_iv.html
@@ -48,6 +48,21 @@
 <td>
 <tr>
 
+<td>False Easting
+<td>
+<td>
+<td>false_easting
+<td>Linear
+<td>
+<tr>
+
+<td>False Northing
+<td>
+<td>
+<td>false_northing
+<td>Linear
+<td>
+<tr>
 </table>
 
 <h3>Notes</h3>
@@ -60,6 +75,8 @@ true of most packages.  Generally it is used for world views I gather.<p>
 
 <pre>
   +proj=eck4 +lon_0=<i>Central Meridian</i>
+              +x_0=<i>False Easting</i>
+              +y_0=<i>False Northing</i>
 </pre>
 
 </b>
