--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -8,9 +8,13 @@
 <li> <a href="albers_equal_area_conic.html">Albers Equal-Area Conic</a>
 <li> <a href="azimuthal_equidistant.html">Azimuthal Equidistant</a>
 <li> <a href="cassini_soldner.html">Cassini-Soldner</a> 
+<li> <a href="cylindrical_equal_area.html">Cylindrical Equal Area</a>
+<li> <a href="eckert_iv.html">Eckert IV</a>
+<li> <a href="eckert_vi.html">Eckert VI</a>
 <li> <a href="equidistant_conic.html">Equidistant Conic</a>
 <li> <a href="equirectangular.html">Equirectangular</a>
 <li> <a href="transverse_mercator.html">Gauss-Kruger</a> 
+<li> <a href="gall_stereographic.html">Gall Stereographic</a>
 <li> <a href="gnomonic.html">Gnomonic</a>
 <li> <a href="hotine_oblique_mercator.html">Hotine Oblique Mercator</a> 
 <li> <a href="laborde_oblique_mercator.html">Laborde Oblique Mercator</a> 
@@ -18,9 +22,11 @@
 <li> <a href="lambert_conic_conformal_1sp.html">Lambert Conic Conformal (1SP)</a> 
 <li> <a href="lambert_conic_conformal_2sp.html">Lambert Conic Conformal (2SP)</a> 
 <li> <a href="lambert_conic_conformal_2sp_belgium.html">Lambert Conic Conformal (2SP Belgium)</a> 
+<li> <a href="cylindrical_equal_area.html">Lambert Cylindrical Equal Area</a>
 <li> <a href="mercator_1sp.html">Mercator (1SP)</a> 
 <li> <a href="mercator_2sp.html">Mercator (2SP)</a> 
 <li> <a href="miller_cylindrical.html">Miller Cylindrical</a>
+<li> <a href="mollweide.html">Mollweide</a>
 <li> <a href="new_zealand_map_grid.html">New Zealand Map Grid</a> 
 <li> <a href="oblique_mercator.html">Oblique Mercator</a>
 <li> <a href="oblique_stereographic.html">Oblique Stereographic</a>
