Added Wkt_adam.zip file.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@235 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -64,8 +64,12 @@ Coordinates, Datums and Transformation Index</a> (offsite)
 <li> <a href="http://gdal.velocet.ca/cgi-bin/csv2html/TABLE=trf_method/CODE>9617">EPSG Projection Transformations</a>
 
 <li> <a href="http://www.petroconsultants.com/products/geodetic.html">EPSG
-Geodesy</a> web page, with EPSG projection database used to generate 
+Geodesy Web Page</a>, with EPSG projection database used to generate 
 libgeotiff normalization csv files.<p>
+
+<li> <a href="Wkt_adam.zip">Wkt_adam.zip</a>: Text file relating EPSG 
+PCS/GCS codes to OpenGIS WKT representations, courtesy of Adam Gawne-Cain
+of Cadcorp.<p>
 
 </ul>
 
