*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@254 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/new_zealand_map_grid.html
+++ b/geotiff/html/proj_list/new_zealand_map_grid.html
@@ -24,7 +24,7 @@
 <tr>
 
 <td>Supported By
-<td>EPSG, GeoTIFF
+<td>EPSG, GeoTIFF, PROJ.4
 <tr>
 
 </table>
@@ -74,10 +74,16 @@
 
 </table>
 
-<h3>Notes</h3>
+<h3>PROJ.4 Organization</h3>
 
-This projection isn't supported by PROJ.4, or GCTP.  I don't have any
-information on the equations.<p>
+<b>
+<pre>
+  +proj=nzmg  +lat_0=<i>Latitude of natural origin</i> 
+              +lon_0=<i>Longitude of natural origin</i>
+              +x_0=<i>False Easting</i>
+              +y_0=<i>False Northing</i>
+</pre>
+</b>
 
 <h3>EPSG Notes</h3>
 
