Updated release code pointer.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@256 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -5,7 +5,7 @@
 <h1>
 The GeoTIFF Web Page</h1> <p>
 
-<i>Last Updated: 20 Sept, 1999</i><p>
+<i>Last Updated: 20 Feb, 2000</i><p>
 
 GeoTIFF represents an effort by over 160 different remote sensing,
 GIS, cartographic, and surveying related companies and organizations
@@ -76,7 +76,7 @@ information, or to get involved.<p>
 <li> <a href="http://www.remotesensing.org/cgi-bin/cvsweb.cgi/osrs/geotiff/">
 libgeotiff CVS Web Access</a><p>
 
-<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.1.1.tar.gz">libgeotiff.1.1.1.tar.gz</a>: Released libgeotiff source.<p>
+<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.1.2.tar.gz">libgeotiff.1.1.2.tar.gz</a> or <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.1.2.zip">libgeotiff.1.1.2.zip</a>: Released libgeotiff source.<p>
 
 <li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/">
 ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/</a> includes a variety
