Added MapRef link.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@266 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -71,6 +71,8 @@ libgeotiff normalization csv files.<p>
 PCS/GCS codes to OpenGIS WKT representations, courtesy of Adam Gawne-Cain
 of Cadcorp.<p>
 
+<li> <a href="http://www.geocities.com/CapeCanaveral/1224/mapref.html">MapRef</a>
+
 </ul>
 
 </body>
