use +k_0 instead of +k
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@274 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/hotine_oblique_mercator.html
+++ b/geotiff/html/proj_list/hotine_oblique_mercator.html
@@ -126,7 +126,7 @@ I think the +no_rot flag is related to this parameter.<p>
   +proj=omerc +lat_0=<i>Latitude of projection center</i> 
               +lonc=<i>Longitude of projection center</i>
               +alpha=<i>Azimuth of initial line</i>
-              +k=<i>Scale factor on initial line</i> 
+              +k_0=<i>Scale factor on initial line</i> 
               +x_0=<i>False Easting</i>
               +y_0=<i>False Northing</i>
 </pre>
