--- a/geotiff/html/proj_list/polar_stereographic.html
+++ b/geotiff/html/proj_list/polar_stereographic.html
@@ -93,7 +93,7 @@ There are substantial questions about Stereographic projections in
 <pre>
   +proj=stere +lat_0=<i>Latitude at projection center</i> 
               +lon_0=<i>Longitude at projection center</i>
-	      +k=<i>Scale factor at natural origin</i>
+	      +k_0=<i>Scale factor at natural origin</i>
               +x_0=<i>False Easting</i>
               +y_0=<i>False Northing</i>
 </pre>
