--- a/geotiff/html/proj_list/mercator_1sp.html
+++ b/geotiff/html/proj_list/mercator_1sp.html
@@ -93,7 +93,7 @@ Mercator.<p>
 <pre>
   +proj=merc  +lat_ts=<i>Latitude of natural origin</i> 
               +lon_0=<i>Longitude of natural origin</i>
-              +k=<i>Scale factor at natural origin</i> 
+              +k_0=<i>Scale factor at natural origin</i> 
               +x_0=<i>False Easting</i>
               +y_0=<i>False Northing</i>
 </pre>
