--- a/geotiff/html/proj_list/oblique_stereographic.html
+++ b/geotiff/html/proj_list/oblique_stereographic.html
@@ -100,7 +100,7 @@ parameters.<p>
 <pre>
   +proj=stere +lat_0=<i>Latitude of natural origin</i> 
               +lon_0=<i>Longitude of natural origin</i>
-              +k=<i>Scale factor at natural origin</i> 
+              +k_0=<i>Scale factor at natural origin</i> 
               +x_0=<i>False Easting</i>
               +y_0=<i>False Northing</i>
 </pre>
