corrected GeogLinearUnitsGeoKey to be of type SHORT
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@275 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/spec/geotiff2.7.html
+++ b/geotiff/html/spec/geotiff2.7.html
@@ -193,7 +193,7 @@ Units =  GeogAngularUnits</pre><tt></tt>
 <img src="gifs/clrbar.gif"></pre><h4>
 GeogLinearUnitsGeoKey </h4>
 <pre>Key ID = 2052
-Type = DOUBLE
+Type = SHORT
 Values:  <a href="geotiff6.html#6.3.1.3">Section 6.3.1.3</a> Codes
 </pre><tt>Allows
 the definition of geocentric CS linear units for user-defined GCS.</tt>
