--- a/geotiff/html/usgs_geotiff.html
+++ b/geotiff/html/usgs_geotiff.html
@@ -1724,7 +1724,7 @@ Greenwich, England.
 <HR>
 GeogLinearUnitsGeoKey 
 Key ID = 2052
-Type = DOUBLE
+Type = SHORT
 Values: Section <A HREF="#hdr 64">6.3.1.3</A> Codes
 
 Allows the definition of geocentric CS linear units for user-defined 
