Added links for bug reporting, and viewing.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@276 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -83,6 +83,13 @@ ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/</a> includes a variety
 of other items, including pre-built libraries and listgeo executables for
 various platforms.<P>
 
+<li> Bug reports for libgeotiff, the GeoTIFF web pages, or specification
+can be 
+<a href="http://bugzilla.remotesensing.org/enter_bug.cgi?product=libtiff">
+entered</a> or 
+<a href="http://bugzilla.remotesensing.org/buglist.cgi?product=libtiff">
+viewed</a> via BugZilla. <p>
+
 </ul>
 
 <hr>
