--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -1,6 +1,6 @@
 <html><head>
 <title>GeoTIFF Web Page </title>
-</head><body>
+</head><body BGCOLOR="#FFFFFF">
 
 <h1>
 The GeoTIFF Web Page</h1> <p>
