--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -1,11 +1,12 @@
 <html><head>
 <title>GeoTIFF Web Page </title>
-</head><body BGCOLOR="#FFFFFF">
+</head>
 
-<h1>
-The GeoTIFF Web Page</h1> <p>
+<body BGCOLOR="#FFFFFF">
 
-<i>Last Updated: 20 Feb, 2000</i><p>
+<h1>The GeoTIFF Web Page</h1> <p>
+
+<i>Last Updated: 11 July, 2000</i><p>
 
 GeoTIFF represents an effort by over 160 different remote sensing,
 GIS, cartographic, and surveying related companies and organizations
