Fixed bug links.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@279 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -86,9 +86,9 @@ various platforms.<P>
 
 <li> Bug reports for libgeotiff, the GeoTIFF web pages, or specification
 can be 
-<a href="http://bugzilla.remotesensing.org/enter_bug.cgi?product=libtiff">
+<a href="http://bugzilla.remotesensing.org/enter_bug.cgi?product=libgeotiff">
 entered</a> or 
-<a href="http://bugzilla.remotesensing.org/buglist.cgi?product=libtiff">
+<a href="http://bugzilla.remotesensing.org/buglist.cgi?product=libgeotiff">
 viewed</a> via BugZilla. <p>
 
 </ul>
