updated mailing list location
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@280 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -97,20 +97,21 @@ viewed</a> via BugZilla. <p>
 
 <!------------------------------------------------------------------------->
 <h2> GeoTIFF Mailing List</h2>
+
 A mailing-list is currently active to discuss the on-going development of this
 standard, and the <a href="api/index.html">libgeotiff</a> support library. 
 To subscribe to this list, send e-mail to:
 <pre>
-       <a href="mailto:listproc@mtmorrison.jpl.nasa.gov">listproc@mtmorrison.jpl.nasa.gov</a>
+       <a href="mailto:majordomo@remotesensing.org">majordomo@remotesensing.org</a>
 </pre>with
 no subject and the body of the message reading:
 <pre>
-     SUBSCRIBE geotiff  Your_FirstName   Your_LastName
+     subscribe geotiff
 </pre>
 
 To post inquiries directly to the list, send email to:
 <pre>
-       <a href="mailto:geotiff@mtmorrison.jpl.nasa.gov">geotiff@mtmorrison.jpl.nasa.gov</a>
+       <a href="mailto:geotiff@remotesensing.org">geotiff@remotesensing.org</a>
 </pre>
 <p>
 
