updated list info again
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@281 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -6,7 +6,7 @@
 
 <h1>The GeoTIFF Web Page</h1> <p>
 
-<i>Last Updated: 11 July, 2000</i><p>
+<i>Last Updated: 18 August, 2000</i><p>
 
 GeoTIFF represents an effort by over 160 different remote sensing,
 GIS, cartographic, and surveying related companies and organizations
@@ -41,7 +41,7 @@ sample files.<p>
 
 </ul>
 
-Somewhat Out of Date Resources:<p>
+Somewhat out of date Resources:<p>
 
 <ul>
 
@@ -98,27 +98,27 @@ viewed</a> via BugZilla. <p>
 <!------------------------------------------------------------------------->
 <h2> GeoTIFF Mailing List</h2>
 
-A mailing-list is currently active to discuss the on-going development of this
+A mailing list is currently active to discuss the on-going development of this
 standard, and the <a href="api/index.html">libgeotiff</a> support library. 
-To subscribe to this list, send e-mail to:
-<pre>
-       <a href="mailto:majordomo@remotesensing.org">majordomo@remotesensing.org</a>
-</pre>with
-no subject and the body of the message reading:
+Mail can be sent to 
+<a href="mailto:geotiff@remotesensing.org">geotiff@remotesensing.org</a>. 
+Online 
+<a href="http://www.remotesensing.org/geotiff/mail/maillist.html">threaded 
+archives</a> are available for viewing on the web.<p>
+
+To subscribe, or unsubscribe send email to 
+<a href="mailto:majordomo@remotesensing.org">majordomo@remotesensing.org</a> 
+with no subject and put one of the following lines in the body of the 
+message:<p>
+
 <pre>
      subscribe geotiff
+<i>or</i>
+     unsubscribe geotiff
+<i>or</i>
+     help
 </pre>
 
-To post inquiries directly to the list, send email to:
-<pre>
-       <a href="mailto:geotiff@remotesensing.org">geotiff@remotesensing.org</a>
-</pre>
-<p>
-
-A threaded 
-<a href=" http://www.remotesensing.org/geotiff/mail/maillist.html">
-mail-archive</a> of the GeoTIFF mailing-list discussions
-is online and available.<p>
 
 <hr>
 Comments? e-mail <a href="mailto:warmerda@home.com">warmerda@home.com 
