Fixed a few problems.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@292 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/faq.html
+++ b/geotiff/html/faq.html
@@ -56,7 +56,6 @@ WWW Homepage</A>.
 <li>
     <A HREF="#Can IP, GIS, CAD, and Desktop Mapping systems all use GeoTIFF?">Can IP, GIS, CAD, and Desktop Mapping systems all use GeoTIFF?</A>
 <li>
-<li>
     <A HREF="#What Data providers are delivering geographic images in GeoTIFF format today?">What Data providers are delivering geographic images in GeoTIFF format today?</A>
 <li>
     <A HREF="#Does GeoTIFF imagery conform to the TIFF specification?">Does GeoTIFF imagery conform to the TIFF specification?</A>
@@ -87,7 +86,7 @@ WWW Homepage</A>.
 <li>
     <A HREF="#Doesn't anyone else have TIFF tags for geographic information?">Doesn't anyone else have TIFF tags for geographic information?</A>
 <li>
-    <A HREF="#Is GeoTIFF based on the world reference files that ESRI uses?">Is GeoTIFF based on the world reference files that ESRI uses?</A>
+    <A HREF="#WorldFile1">Is GeoTIFF based on the world reference files that ESRI uses?</A>
 <li>
     <A HREF="#WorldFile2">How do I convert between ESRI world files, and GeoTIFF?</A>
 <li>
@@ -444,7 +443,7 @@ and supports geographic parameters.
 
 <!--------------------------------------------------------------------------->
 
-<H3><A NAME="Is GeoTIFF based on the world reference files that ESRI uses?">Is GeoTIFF based on the world reference files that ESRI uses?</A></H3>
+<H3><A NAME="WorldFile1">Is GeoTIFF based on the world reference files that ESRI uses?</A></H3>
      
 ESRI's world file is a separate file with limited metadata content 
 designed only for use in Arc/Info and other ESRI softwares, though widely
