Added links to utility program pages.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@294 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -6,7 +6,7 @@
 
 <h1>The GeoTIFF Web Page</h1> <p>
 
-<i>Last Updated: 18 August, 2000</i><p>
+<i>Last Updated: 29 August, 2000</i><p>
 
 GeoTIFF represents an effort by over 160 different remote sensing,
 GIS, cartographic, and surveying related companies and organizations
@@ -83,6 +83,13 @@ libgeotiff CVS Web Access</a><p>
 ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/</a> includes a variety
 of other items, including pre-built libraries and listgeo executables for
 various platforms.<P>
+
+<li> <a href="listgeo.html">listgeo</a> - utility program (distributed with
+libgeotiff) for dumping the metadata of a GeoTIFF file.<p>
+
+<li> <a href="geotifcp.html">geotifcp</a> - utility program (distributed with
+libgeotiff) for applying metadata to a TIFF file, making it a GeoTIFF
+file.<p>
 
 <li> Bug reports for libgeotiff, the GeoTIFF web pages, or specification
 can be 
