Updated PCI freeware location.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@295 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/software.html
+++ b/geotiff/html/software.html
@@ -63,10 +63,11 @@ editing capabilities (i.e. no file conversion necessary).
 PCI</a>'s V6.0 EASI/PACE release includes GeoTIFF support for a variety of
 projections.  This release is currently shipping.
 <p>
-Their <a href="ftp://ftp.pci.on.ca/pub/freeware/">PCI Freeware Viewer</a>
- is now available on their ftp site, providing GeoTIFF read-support.  This
+Their <a href="http://www.pcigeomatics.com/freeware/freeware.html">PCI 
+Freeware Viewer</a>
+is now available on their ftp site, providing GeoTIFF read-support.  This
 gives a reference implementation of a GeoTIFF reader that people can
-use for comparison.  
+use for comparison. 
 <p>
 <li>
 <a href="http://www.ermusa.com/">
