--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -24,6 +24,10 @@ This is the <b>official release version</b> of the GeoTIFF spec.<p>
 <li> <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>: Primary GeoTIFF web site (this 
 page).<p>
 
+<li> <a href="http://www.geotiff.org/">http://www.geotiff.org/</a>: 
+Niles Ritters GeoTIFF Site (home of Java GeoTIFF packages, and GeoTIFF 2.0
+Specification Development).<p>
+
 <li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/">ftp://ftp.remotesensing.org/pub/geotiff/</a>: Current archive of
 GeoTIFF spec, EPSG/POSC tables, and libgeotiff source code.<p>
 
