replace h1 with geotiff icon
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@308 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -1,12 +1,12 @@
 <html><head>
-<title>GeoTIFF Web Page </title>
+<title>GeoTIFF</title>
 </head>
 
 <body BGCOLOR="#FFFFFF">
 
-<h1>The GeoTIFF Web Page</h1> <p>
+<img src="geotiff.gif" height=89 width=400><p>
 
-<i>Last Updated: 29 August, 2000</i><p>
+<i>Last Updated: 16 November, 2000</i><p>
 
 GeoTIFF represents an effort by over 160 different remote sensing,
 GIS, cartographic, and surveying related companies and organizations
